--- a/RouletteGame.Models/RouletteGame.Models.csproj
+++ b/RouletteGame.Models/RouletteGame.Models.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
+
 </Project>
